[gd_scene load_steps=4 format=3 uid="uid://bv27tc5e5gqen"]

[ext_resource type="Script" path="res://Instanced Scenes/base_area.gd" id="1_3s5sn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nodcs"]
size = Vector2(24, 24)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_7aoeq"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true

[node name="Base Area" type="Area2D"]
script = ExtResource("1_3s5sn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nodcs")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="End_Time" type="Timer" parent="."]
unique_name_in_owner = true

[node name="Ping_Time" type="Timer" parent="."]
unique_name_in_owner = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
unique_name_in_owner = true
replication_config = SubResource("SceneReplicationConfig_7aoeq")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="End_Time" to="." method="_on_end_time_timeout"]
[connection signal="timeout" from="Ping_Time" to="." method="_on_ping_time_timeout"]
